# cosmosx-backend

./: .env  Database.db  Dockerfile  README.md  insert_research_gaps.sql  main.py  populate.sql  pyproject.toml
.github/workflows/: cd.yml
apis/: hypothesis_api.py  research_api.py  research_gaps_api.py  search_api.py
client/: OpenAiClient.py  open_ai_client.py
db/: __init__.py  db.py
db/rag_store/: cfg.json  doc_index.npy  info.csv
dto/: hypothesis_dto.py  research_dto.py  research_gaps_dto.py  search_dto.py
exception/: exceptions.py  handlers.py
log/: log.py
model/: __init__.py  hypothesis_model.py  hypothesis_research_model.py  research_figure_model.py  research_gaps_model.py  research_model.py  reserach_with_gaps_model.py  user_model.py
prompt/: create_hypothesis_prompt.txt  specify_question_prompt.txt
prompt/resolver/: hypothesis_prompt_resolver.py
repository/: figure_repository.py  hypothesis_repository.py  hypothesis_research_repository.py  hypothesis_reserach_repository.py  research_gaps_repository.py  research_repository.py
service/: hypothesis_service.py  research_gaps_service.py  research_service.py  search_service.py
tests/: Database.db  conftest.py  test_figure_repo.py  test_hypothesis.py  test_hypothesis_api.py  test_hypothesis_repository.py  test_hypothesis_service.py  test_openai_client.py  test_research_api.py  test_research_service.py  test_reserach_gaps.py  test_reserach_gaps_repository.py
util/: JsonDecoder.py  json_decoder.py
