[project]
name = "fastapi-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "joblib>=1.5.2",
    "pydantic>=2.11.7",
    "pyarrow>=21.0.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "numpy>=1.24.0",
    # 테스트
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",
    # openai
    "openai>=1.0.0",
    # ML/RAG
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "adapters>=1.0.0",
    "pandas>=2.0.0",
    "faiss-cpu>=1.8.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]